--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,19 @@ h1{
     width: 100px;
     height: 50px;
 }
+
+.cuarta {
+
+background-color: black;
+width: 100px;
+height: 50px;
+
+}
+
+.quinta {
+
+background-color:chartreuse
+
+height: 50px;
+
+}
